# ScreenshotTranslator2

./: .gitignore  README.md  pyproject.toml  start.sh
app/: config.py  llama_client.py  main.py
app/scripts/: build_llama.sh
app/static/: index.html  main.js  style.css
